2006-06-09  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtklabel.c (gtk_label_class_init): install
	'hildon-keyboard-shortcuts' to GtkSettings
	(keyboard_shortcuts_change_notify) (traverse_container)
	(hildon_label_setting_changed) (gtk_label_screen_changed): Monitor
	changes in GtkSettings and update all labels and accel labels in all
	toplevel windows.
	(gtk_label_set_pattern_internal): Underline mnemonics only if
	'hildon-keyboard-shortcuts' GtkSetting is enabled
	* gtk/gtkaccellabel.c (gtk_accel_label_refetch): Display shortcuts only
	if 'hildon-keyboard-shortcuts' GtkSetting is enabled
	* tests/Makefile.am:
	* tests/testshortcuts.c: Testing showing and hiding shortcuts
	(#72375, OSSO129887, OSSO129888)

2006-06-09  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkcombobox.c (gtk_combo_box_new_text)
	* gtk/gtkcomboboxentry.c (gtk_combo_box_entry_init): Remove explicit
	ellipsizing from the created cell renderer as it disables the
	autoellipsizing our applications expect. N#31471

2006-06-02  Tommi Komulainen  <tommi.komulainen@nokia.com>
	
	* gtk/gtkwindow.c (gtk_window_key_release_event): Chain up to
	key_release_event, not key_press_event (#343677)

2006-06-02  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkviewport.c (viewport_set_adjustment): Really fix M#352

2006-06-01  Marius Vollmer  <marius.vollmer@nokia.com>

	* gtk/gtktreeview.c (gtk_tree_view_leave_notify): Do not reset
	pressed_button so that a drag can start even if the pointer leaves the
	widget before crossing the drag threshold. N#31696
	
2006-06-01  Kristian Rietveld  <kris@imendio.com>

	* gtk/gtktreemodelfilter.c
	(gtk_tree_model_filter_convert_child_path_to_path): need to use
	gtk_tree_model_filter_get_iter_full() since the path returned
	by gtk_real_tree_model_filter_convert_child_path_to_path() includes
	invisible nodes. N#31695

2006-05-31  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkcellrenderertext.c (gtk_cell_renderer_text_render): When